Fix comments UI on mobile (#104)

--- a/public/styles/main.scss
+++ b/public/styles/main.scss
@@ -58,7 +58,7 @@ code {
 
 .comment-input {
   display: inline-block;
-  width: 90%;
+  width: 85%;
 }
 
 .ui.comments {
@@ -68,7 +68,7 @@ code {
   }
   .comment > .content {
     display: inline-block;
-    max-width: 90%;
+    max-width: 85%;
   }
 }
 
